<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CodeTalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Following</string>
    <string name="action_logout">Log-out</string>
    <string name="title_activity_start">Choose a group</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_icon">Icon</string>
    <string name="lv_item_groupname">Group Name</string>
    <string name="lv_item_groupmode">Group Mode</string>
    <string name="lv_item_notetitle">Note Title</string>
    <string name="lv_item_noteuser">Note User</string>
    <string name="lv_item_notedate">Note Date</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_add_note">Add Note</string>
    <string name="title_follow">Follow</string>
    <string name="title_unfollow">Stop Following</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_empty_groups">There are no groups to show!</string>
    <string name="title_empty_notes">There are no notes to show!</string>
    <string name="title_empty_following">You are not following any groups!</string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="title_activity_following">FollowingActivity</string>

</resources>
