<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pt.ulht.codetalk.activities.GroupActivity">

    <LinearLayout
        android:id="@+id/groupLinear"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnFollow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_follow"
            android:textColor="@color/myWhite"
            android:background="@color/infoBlue"/>

        <Button
            android:id="@+id/btnUnfollow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/myWhite"
            android:text="@string/title_unfollow"
            android:background="@color/warningYellow"/>

        </LinearLayout>

    <Button
        android:id="@+id/btnAddNote"
        android:layout_below="@id/groupLinear"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_note"
        android:textColor="@color/myWhite"
        android:background="@color/myGreen"/>

    <ListView
        android:id="@android:id/list"
        android:layout_below="@id/btnAddNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <TextView
        android:id="@+id/emptyNotes"
        android:layout_below="@id/btnAddNote"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/title_empty_notes" />

</RelativeLayout>
