<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <TextView
        android:id="@+id/lvItemNoteTitle"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lv_item_notetitle"
        android:textSize="16sp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/lvItemNoteTitle"
        android:gravity="center" >
        <TextView
            android:id="@+id/lvItemNoteCreatedBy"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lv_item_noteuser"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/lvItemNoteCreatedAt"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lv_item_notedate"
            android:textSize="12sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/lvItemNoteGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="0sp"
        android:textColor="@android:color/transparent" />

</RelativeLayout>